@@ -1,3 +1,10 @@
+2002-11-04  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* shimbun/mew-shimbun.el (mew-shimbun-visit-folder): New
+	definition.
+	(mew-shimbun-retrieve-all, mew-shimbun-expire-all): Use
+	`mew-shimbun-visit-folder'.
+
 2002-11-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m-bookmark.el: Use non-visiting working buffer; Auto-detection
